codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__tests__composer_minimal_borders_snapshot.snap
---
source: tui2/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
────────────────────────────────────────────────
› Ask xcodex to do anything                     
────────────────────────────────────────────────
  100% context left · ? for shortcuts
