codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__tests__status_only_snapshot.snap
---
source: tui2/src/bottom_pane/mod.rs
assertion_line: 1161
expression: "render_snapshot(&pane, area)"
---
• Charging (0s • esc to interrupt)              
                                                
                                                
› Ask xcodex to do anything                     
                                                
  100% context left · ? for shortcuts
